--- a/Caddyfile
+++ b/Caddyfile
@@ -2,33 +2,5 @@
     root * /app/public
     encode zstd br gzip
     file_server
-
-    # Configuration PHP
-    php_fastcgi unix//var/run/php/php-fpm.sock {
-        try_files {path} {path}/ /index.php?{query}
-    }
-
-    header {
-        X-Content-Type-Options nosniff
-        X-Frame-Options DENY
-        X-XSS-Protection "1; mode=block"
-        Strict-Transport-Security "max-age=31536000; includeSubDomains; preload"
-        -Server
-    }
-
-    @forbidden {
-        path /.env*
-        path /composer.json
-        path /composer.lock
-        path /package.json
-        path /package-lock.json
-        path /.git*
-        path /storage/logs*
-    }
-    respond @forbidden 403
-
-    # Redirection pour Laravel
-    rewrite {
-        to {path} {path}/ /index.php?{query}
-    }
+    php /app/frankenphp.php
 }
