--- a/supervisor/supervisord.conf
+++ b/supervisor/supervisord.conf
@@ -6,7 +6,7 @@ logfile_maxbytes=0
 pidfile=/var/run/supervisord.pid
 
 [program:octane]
-command=php /var/www/html/artisan octane:frankenphp
+command=php /app/artisan octane:frankenphp
 autostart=true
 autorestart=true
 priority=2
@@ -18,7 +18,7 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 
 [program:queue-runner]
-command=php /var/www/html/artisan queue:work --tries=3 --timeout=90 --sleep=3 --daemon
+command=php /app/artisan queue:work --tries=3 --timeout=90 --sleep=3 --daemon
 autostart=true
 autorestart=true
 priority=3
@@ -30,15 +30,3 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 
 [supervisorctl]
-
-# [program:websocket]
-# command=php /var/www/html/artisan websockets:serve
-# autostart=true
-# autorestart=true
-# priority=3
-# stdout_events_enabled=true
-# stderr_events_enabled=true
-# stdout_logfile=/dev/stdout
-# stdout_logfile_maxbytes=0
-# stderr_logfile=/dev/stderr
-# stderr_logfile_maxbytes=0
