--- a/supervisor/supervisord.conf
+++ b/supervisor/supervisord.conf
@@ -6,7 +6,7 @@ logfile_maxbytes=0
 pidfile=/var/run/supervisord.pid
 
 [program:octane]
-command=php /app/artisan octane:frankenphp
+command=php /app/artisan octane:frankenphp --host=0.0.0.0 --port=80 --admin-port=2019
 autostart=true
 autorestart=true
 priority=2
