--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,9 @@
 {
     "$schema": "https://getcomposer.org/schema.json",
-    "name": "laravel/laravel",
+    "name": "laravel/user-microservice",
     "type": "project",
-    "description": "The skeleton application for the Laravel framework.",
-    "keywords": ["laravel", "framework"],
+    "description": "User Management Microservice with DDD Architecture",
+    "keywords": ["laravel", "microservice", "ddd", "cqrs", "event-sourcing"],
     "license": "MIT",
     "require": {
         "php": "^8.2",
@@ -12,7 +12,8 @@
         "laravel/tinker": "^2.10.1",
         "livewire/livewire": "^3.6.4",
         "livewire/volt": "^1.7.0",
-        "predis/predis": "^3.2"
+        "predis/predis": "^3.2",
+        "ramsey/uuid": "^4.7"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
@@ -59,6 +60,10 @@
         "test": [
             "@php artisan config:clear --ansi",
             "@php artisan test"
+        ],
+        "ddd:check": [
+            "@php artisan route:list --path=api",
+            "@php artisan event:list"
         ]
     },
     "extra": {
